[gd_scene load_steps=3 format=3 uid="uid://b67rk71oa2ov"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_8xqkc"]
[ext_resource type="PackedScene" path="res://scenes/Player.tscn" id="2_m7kj4"]

[node name="Main" type="Node2D"]
script = ExtResource("1_8xqkc")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopPanel" type="Panel" parent="UILayer/GameUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
modulate = Color(0, 0, 0, 0.7)

[node name="HealthBar" type="ProgressBar" parent="UILayer/GameUI/TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 220.0
offset_bottom = 15.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="UILayer/GameUI/TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -40.0
offset_right = 120.0
offset_bottom = -17.0
text = "CURSOR HEALTH"
horizontal_alignment = 1

[node name="EnergyBar" type="ProgressBar" parent="UILayer/GameUI/TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 240.0
offset_top = -15.0
offset_right = 440.0
offset_bottom = 15.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="EnergyLabel" type="Label" parent="UILayer/GameUI/TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 240.0
offset_top = -40.0
offset_right = 340.0
offset_bottom = -17.0
text = "CURSOR ENERGY"
horizontal_alignment = 1

[node name="FragmentCounter" type="Label" parent="UILayer/GameUI/TopPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 20.0
offset_right = 75.0
offset_bottom = 60.0
text = "FRAGMENTS: 0/10"
horizontal_alignment = 1

[node name="BottomPanel" type="Panel" parent="UILayer/GameUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
modulate = Color(0, 0, 0, 0.7)

[node name="HackToolPanel" type="HBoxContainer" parent="UILayer/GameUI/BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -30.0
offset_right = 200.0
offset_bottom = 30.0

[node name="TimeRewindBtn" type="Button" parent="UILayer/GameUI/BottomPanel/HackToolPanel"]
layout_mode = 2
text = "CTRL-Z
(20 Energy)"

[node name="DataLeakBtn" type="Button" parent="UILayer/GameUI/BottomPanel/HackToolPanel"]
layout_mode = 2
text = "DATA LEAK
(25 Energy)"

[node name="MemoryScanBtn" type="Button" parent="UILayer/GameUI/BottomPanel/HackToolPanel"]
layout_mode = 2
text = "MEM SCAN
(15 Energy)"

[node name="MindInfoPanel" type="Panel" parent="UILayer/GameUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
modulate = Color(0.1, 0.1, 0.2, 0.9)

[node name="MindTitle" type="Label" parent="UILayer/GameUI/MindInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
text = "MIND PROFILE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MindDetails" type="RichTextLabel" parent="UILayer/GameUI/MindInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = -20.0
bbcode_enabled = true
text = "[center]Mind details will appear here[/center]"

[node name="WorldContainer" type="Node2D" parent="."]

[node name="DungeonRenderer" type="Node2D" parent="WorldContainer"]

[node name="Player" parent="WorldContainer" instance=ExtResource("2_m7kj4")]

[node name="Enemies" type="Node2D" parent="WorldContainer"]

[node name="MemoryFragments" type="Node2D" parent="WorldContainer"]

[node name="Effects" type="Node2D" parent="WorldContainer"]